--- a/resources/sass/_images.sass
+++ b/resources/sass/_images.sass
@@ -14,6 +14,9 @@ $banners: ['acu_chin_1', 26em, 70%], ['bp_1', 30em, 60%], ['crystals', 20em, 50%
   background-repeat: no-repeat
   background-size: cover
   min-height: min(10vh, 15em)
+  &.fit-container
+    height: 100% !important
+    flex-grow: 1
   &.fit-content
     height: auto !important
 
