--- a/resources/sass/_vars.sass
+++ b/resources/sass/_vars.sass
@@ -1,2 +1,15 @@
 $widths: ('mini':200px,'tiny':300px,'xsmall':400px,'small':600px, 'medium':800px, 'large':900px, 'xlarge': 1100px, '95':95%, '100':100%)
 $widths_vw: ('sixth':16vw,'fifth':20vw,'quarter':25vw,'third':33vw,'half':50vw,'two-thirds':66vw,'three-quarters':75vw)
+
+$spacings: ('none':0, 'xmini':0.1rem, 'mini':0.25rem, 'xsmall':0.5rem, 'small':1rem, 'medium':1.5rem, 'large': 2rem, 'xlarge': 2.5rem, 'huge':3rem, 'massive':4rem, 'auto':auto)
+$roundedness: ('none':0, 'small':0.25rem, 'medium':0.5rem, 'large':0.75rem, 'full':50%)
+
+$heights: ('mini':100px, 'xsmall':200px, 'small':300px, 'medium':400px, 'large':600px, 'xlarge': 900px)
+$pops: ('small':20%,'medium':35%, 'half':50%, 'large':70%)
+
+$border-widths: ('none':0, 'thin':1px, 'small':2px, 'medium':3px, 'large':4px, 'thick':5px)
+
+$box-colors: 'pink', 'yellow', 'purple', 'green', 'darkgray', 'gray'
+$box-shades: ('dark': 15 100, 'medium': 10 75, 'light': 5 50)
+
+$answer-colors: 'purple', 'green', 'yellow', 'pink'
