--- a/resources/sass/_layout.sass
+++ b/resources/sass/_layout.sass
@@ -1,8 +1,8 @@
 @forward "colors"
 @use "colors"
-@forward "mixins" as mix-*
+@forward "mixins"
 @use "mixins" as mix
-@forward "vars" as var-*
+@forward "vars"
 @use "vars" as var
 @use "sass:math"
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap')
@@ -21,22 +21,15 @@ body
   overflow-anchor: none
   overflow-wrap: break-word
 
-// @media (max-width: 500px) and (min-width:0px)
-//   body 
-//     font-size: 12px !important
+#App
+  min-height: 100vh
 
-// @media (min-width: 501px)
-//   body 
-//     font-size: 14px !important
-
-
-// footer
-//   position: absolute
-//   background-color: colors.get('purple',90)
-//   color: white
-//   bottom: 0
-//   padding: 1em
-//   width:100%
+#Nav, #Content, #Footer
+  display: block
+#Content
+  display: flex
+#Nav
+  z-index: 66
 
 .smaller 
   font-size: 0.9em
@@ -90,30 +83,7 @@ div:not(.button, .tooltip), span
       color: colors.get($color)
       text-decoration-color: colors.get($color)
 
-@function val_check ($value)
-  @if $value == 'auto'
-    @return $value
-  @else
-    @return #{$value / 100}rem
 
-@mixin pad ($y: 0, $x: null, $bottom: null, $right: null) 
-  @if ($x == null)
-    padding: val_check($y) 
-  @else if ($bottom == null)
-    padding: val_check($y) val_check($x)
-  @else if ($right == null)
-    padding: val_check($y) val_check($x) val_check($bottom)
-  @else
-    padding: val_check($y) val_check($x) val_check($bottom) val_check($right)
-@mixin margin ($y: 0, $x: null, $bottom: null, $right: null) 
-  @if ($x == null)
-    margin: val_check($y) 
-  @else if ($bottom == null)
-    margin: val_check($y) val_check($x)
-  @else if ($right == null)
-    margin: val_check($y) val_check($x) val_check($bottom)
-  @else
-    margin: val_check($y) val_check($x) val_check($bottom) val_check($right)
 @mixin max ($auto_margin: true)
   width: max-content
   max-width: 100%
@@ -172,7 +142,7 @@ $easeinout_sine: cubic-bezier(0.37, 0, 0.63, 1)
     min-width: min(100%, 800px)
   &.full
     width: 100%
-.max
+.fit-content
   @include max
   &.button_box
     display: block
@@ -207,13 +177,13 @@ a.button, div.button
   text-align: center
   letter-spacing: 1px
   font-size: 1em
-  line-height: 0.9
+  line-height: normal
   border-radius: 4px
   border-width: 1px
   border-style: solid
   border-color: black
   color: colors.get('white',80)
-  padding: 1em
+  padding: 0.65em
   margin: 0.5em
   text-decoration: none
   white-space: nowrap
@@ -239,45 +209,47 @@ a.button, div.button
     color: black
   &.cancel
     @extend .black70
-  $sizes: ('xsmall':0.7em,'small':0.9em,'large':1.1em, 'xlarge':1.2em)
+  $sizes: ('xsmall':0.7em,'small':0.9em,'large':1.1em, 'xlarge':1.3em)
   @each $name, $size in $sizes
     &.#{$name}
       font-size: $size
+      padding: $size * 0.65
   &.disabled
     opacity: 0.5
     cursor: not-allowed
 
-@mixin box ($color:'gray', $radius: 5px, $opaque: true, $opacity: 10, $border-width: 1px, $color_bg: true, $flex: false)
-  position: relative
-  border: #{$border-width} solid colors.get($color,$opacity*5,$opaque)
-  background-color: colors.get($color,$opacity,$opaque)
-  @if ($flex)
-    display: inline-flex
-  @else
-    display: inline-block
-  border-radius: $radius
-  padding: 0.2em 0.5em
-  max-width: 100%
-  box-sizing: border-box
-  &.max, &.full
-    display: block
-  &.squared
-    border-radius: 0
-  @each $color in ['pink' 'yellow' 'purple' 'green']
-    &.#{$color}
-      border: #{$border-width} solid colors.get($color, $opacity*7.5, $opaque)
-      @if ($color_bg)
-        background-color: colors.get($color, $opacity, $opaque)
-      > h1, > h2, > h3, > h4, > h5
-        color: colors.get($color)      
-      &.light
-        $lighter: $opacity * 0.5
-        border: #{$border-width} solid colors.get($color, $lighter*7.5, $opaque)
-        @if ($color_bg)
-          background-color: colors.get($color, $lighter, $opaque)
+// @mixin box ($color:'gray', $radius: 5px, $opaque: true, $opacity: 10, $border-width: 1px, $color_bg: true, $flex: false)
+//   position: relative
+//   border: #{$border-width} solid colors.get($color,$opacity*5,$opaque)
+//   background-color: colors.get($color,$opacity,$opaque)
+//   @if ($flex)
+//     display: inline-flex
+//   @else
+//     display: inline-block
+//   border-radius: $radius
+//   padding: 0.2em 0.5em
+//   max-width: 100%
+//   box-sizing: border-box
+//   &.max, &.full
+//     display: block
+//   &.squared
+//     border-radius: 0
+//   @each $color in ['pink' 'yellow' 'purple' 'green']
+//     &.#{$color}
+//       border: #{$border-width} solid colors.get($color, $opacity*7.5, $opaque)
+//       @if ($color_bg)
+//         background-color: colors.get($color, $opacity, $opaque)
+//       > h1, > h2, > h3, > h4, > h5
+//         color: colors.get($color)      
+//       &.light
+//         $lighter: $opacity * 0.5
+//         border: #{$border-width} solid colors.get($color, $lighter*7.5, $opaque)
+//         @if ($color_bg)
+//           background-color: colors.get($color, $lighter, $opaque)
 
-@mixin indent
-  @include pad(0,0,0,200)
+// @mixin indent
+//   @include pad(0,0,0,200)
+
 
 @mixin flexbox
   display: flex
@@ -290,33 +262,34 @@ a.button, div.button
     display: inline-block
   > .flexbox
     display: inline-flex
-  > .top
-    align-self: flex-start
   > .new_line
-    width: 100%
-@mixin flexbox_spread
+    flex-basis: 100%
+
+@mixin flex_spread
   @include flexbox
   justify-content: space-between
-@mixin flexbox_left
+@mixin flex_left
   @include flexbox
   justify-content: flex-start
   text-align: left
-@mixin flexbox_right
+@mixin flex_right
   @include flexbox
   justify-content: flex-end
   text-align: right
-@mixin flexbox_nowrap
+@mixin flex_nowrap
   @include flexbox
   flex-wrap: nowrap
-@mixin flexbox_inline
+@mixin flex_inline
   @include flexbox
   display: inline-flex
-@mixin flexbox_column
+@mixin flex_column
   @include flexbox
   flex-direction: column
 
 .flexbox
   @include flexbox
+  &.stretch
+    align-items: stretch
   &.spread 
     justify-content: space-between
   &.left
@@ -356,7 +329,6 @@ a.button, div.button
     &.#{$name}
       height: $height
 
-// $widths: ('mini':200px,'tiny':300px,'xsmall':400px,'small':600px, 'medium':800px, 'large':900px, 'xlarge': 1100px, '95':95%, '100':100%)
 .w
   &-max
     width: max-content
@@ -370,7 +342,7 @@ a.button, div.button
     &-min
       &-#{$name}
         min-width: $width
-$widths_vw: ('sixth':16vw,'fifth':20vw,'quarter':25vw,'third':33vw,'half':50vw,'two-thirds':66vw,'three-quarters':75vw)
+
 .vw
   @each $name, $width in var.$widths_vw
     &-#{$name}
@@ -382,9 +354,8 @@ $widths_vw: ('sixth':16vw,'fifth':20vw,'quarter':25vw,'third':33vw,'half':50vw,'
       &-#{$name}
         min-width: $width
 
-$heights: ('mini':100px, 'xsmall':200px, 'small':300px, 'medium':400px, 'large':600px, 'xlarge': 900px)
 .h
-  @each $name, $height in $heights
+  @each $name, $height in var.$heights
     &-#{$name}
       height: $height
     &-max
@@ -394,9 +365,8 @@ $heights: ('mini':100px, 'xsmall':200px, 'small':300px, 'medium':400px, 'large':
       &-#{$name}
         min-height: $height
     
-$pops: ('small':20%,'medium':35%, 'half':50%, 'large':70%)
 .pop
-  @each $name, $pop in $pops
+  @each $name, $pop in var.$pops
     &-down
       &-#{$name}
         transform: translateY($pop)
@@ -439,13 +409,7 @@ svg
   &.max
     display: block
 
-@mixin round ($diameter: 2)
-  width: #{$diameter}em
-  height: #{$diameter}em
-  border-radius: 50%
 .circle
-  // *
-  //   overflow: visible !important
   overflow: visible !important
   transform-origin: center
   &.pink
@@ -472,6 +436,8 @@ svg
     transform-origin: center
   &.spin
     animation: spin 2.3s linear 0.4s infinite
+    max-width: unset !important
+    max-height: unset !important
     circle
       animation: dash_start 0.4s ease-in, dash_offset 1.9s $easeinout_sine 0.4s infinite alternate
     g
@@ -488,8 +454,6 @@ svg
         circle
           animation: dash_offset_fill #{$s}s linear
       
-
-      // animation-fill-mode: forwards
 .loading
   .circle
     &.spin
@@ -514,8 +478,9 @@ svg
     stroke-dashoffset: 0
 
 .option_dots
-  @include box
-  padding: 0.1em
+  // @extend .box
+  // @include mix.box('purple')
+  // @include mix.pad('xmini')
   position: absolute
   top: 0
   box-sizing: content-box
@@ -540,16 +505,16 @@ svg
 
 
 .box, .button_box
-  @include box
+  @include mix.box
 .button_box
-  @include pad(0)
+  @include mix.pad('none')
   background-color: transparent
   border-color: transparent
   // text-align: center
 
 // margin and padding
-$spacings: ('none':0, 'mini':0.25rem, 'xsmall':0.5rem, 'small':1rem, 'medium':1.5rem, 'large': 2rem, 'xlarge': 2.5rem, 'huge':3rem, 'massive':4rem )
-@each $name,$space in $spacings
+// $spacings: ('none':0, 'mini':0.25rem, 'xsmall':0.5rem, 'small':1rem, 'medium':1.5rem, 'large': 2rem, 'xlarge': 2.5rem, 'huge':3rem, 'massive':4rem )
+@each $name,$space in var.$spacings
   .m-#{$name}
     margin: $space !important
     &-y
@@ -579,19 +544,24 @@ $spacings: ('none':0, 'mini':0.25rem, 'xsmall':0.5rem, 'small':1rem, 'medium':1.
     &-bottom
       padding-bottom: $space !important
     
-$fonts: ('xsmall':0.8em, 'small':0.9em, 'large':1.1em, 'xlarge':1.2em, 'huge':1.5em, 'double':2em, 'triple':3em)
-@each $name, $size in $fonts
+$font-sizes: ('xsmall':0.8em, 'small':0.9em, 'large':1.1em, 'xlarge':1.2em, 'huge':1.5em, 'double':2em, 'triple':3em)
+@each $name, $size in $font-sizes
   .text
     &-#{$name}
       font-size: $size
+$font-weights: ('thin':300, 'regular':400, 'bold':700)
+@each $name, $size in $font-weights
+  .text
+    &-#{$name}
+      font-weight: $size
 
-$thicknesses: ('thin':1px,'medium':2px,'thick':3px,'xthick':4px)
-$styles: ['solid', 'dashed']
+$border-thicknesses: ('thin':1px,'medium':2px,'thick':3px,'xthick':4px)
+$border-styles: ['solid', 'dashed']
 .b
-  @each $style in $styles
+  @each $style in $border-styles
     &-#{$style}
       border-style: $style
-  @each $name, $thickness in $thicknesses
+  @each $name, $thickness in $border-thicknesses
     &.#{$name}
       border-width: $thickness
 $rounded: ('small':3px, 'medium':5px, 'large':7px, 'full':50%)
@@ -603,7 +573,7 @@ $rounded: ('small':3px, 'medium':5px, 'large':7px, 'full':50%)
   
 
 .indent
-  @include indent
+  @include mix.pad('mini','left')
 .prompt
   @extend .box
 .quote
