--- a/resources/sass/_nav.sass
+++ b/resources/sass/_nav.sass
@@ -117,13 +117,17 @@
         position: sticky
         top: #{4 + 3 * ($num - 1.1)}em
 
-#NavBar
+#Nav 
   position: sticky
+  top: 0
+
+#NavBar
   height: 4em
   padding: 0 2em
-  top: 0  
+  width: 100%
   background-color: colors.get('white',97)
   z-index: 66
+  display: flex
 
 #MobileMenu
   display: none
