adjusting icon png urls

--- a/resources/sass/_images.sass
+++ b/resources/sass/_images.sass
@@ -30,7 +30,7 @@ $icons: 'internal','joint','psych','acupuncture','botanical','fascial','meditati
   margin: 1em 0
   @each $name in $icons
     &.#{$name}
-      background-image: url(/images/icons/pink/svg/#{$name}.svg)
+      background-image: url(/images/icons/pink/png/#{$name}.png)
 
 $social: 'fb', 'ig', 'youtube'
 .icon-social
